--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3 sidebar-wrapper">
+      <div class="col-lg-3 sidebar-wrapper">
         <div class="profile-container">
           <img class="profile" src="assets/img/profile-img-circle-160.png" alt="my image" />
           <h1 class="name">Aleksandar Mitrevski</h1>
@@ -108,7 +108,7 @@
       </div>
       <!--//sidebar-wrapper -->
 
-      <div class="col-md-9 main-wrapper">
+      <div class="col-lg-9 main-wrapper">
 
         <section class="section summary-section">
           <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
