--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="section summary-section">
           <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
           <div class="summary">
-            <p>I started to learn coding couple of months ago, since then I gained decent knowledge of structuring and
+            <p>I started to learn coding about a year ago, since then I gained decent knowledge of structuring and
               styling web pages with HTML, CSS and Bootstrap. </p>
           </div>
           <!--//summary-->
