--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="col-lg-3 sidebar-wrapper">
         <div class="profile-container">
-          <img class="profile" src="assets/img/profile-img-circle-160.png" alt="my image" />
+          <img class="profile" src="assets/img/circle-cropped-300.png" style="width: 180px;" alt="my image" />
           <h1 class="name">Aleksandar Mitrevski</h1>
           <h3 class="tagline">Full Stack Web Developer/ student</h3>
         </div>
@@ -50,7 +50,7 @@
             <!-- <li class="website"><i class="fas fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li> -->
             <li class="linkedin"><i class="fab fa-linkedin-in"></i><a
                 href="https://www.linkedin.com/in/alexander-mitrevski-74004b95/"
-                target="_blank">linkedin.com/in/alexander-mitrevski-74004b95/</a></li>
+                target="_blank">LinkedIn profile</a></li>
             <li class="github"><i class="fab fa-github"></i><a href="https://github.com/AlexsandarM"
                 target="_blank">github.com/AlexsandarM</a></li>
             <li class="twitter"><i class="fab fa-twitter"></i><a href="https://twitter.com/AlexsandarM"
@@ -114,7 +114,7 @@
           <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
           <div class="summary">
             <p>I started to learn coding about a year ago, since then I gained decent knowledge of structuring and
-              styling web pages with HTML, CSS and Bootstrap. </p>
+              styling web pages with <span>HTML, CSS.</span> I have knowledge of responsive design and mobile first approach with <span>Bootstrap 4,</span>  building single page web apps with <span>JS/Typescript</span> framework <span>Angular 8.</span> Understanding of the entire web development process (design, development and deployment)</p>
           </div>
           <!--//summary-->
         </section>
@@ -126,11 +126,11 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">Freelance Web Developer </h3>
+                <h3 class="job-title">"Freelance" - Web Developer </h3>
                 <div class="time">2019 - Present</div>
               </div>
               <!--//upper-row-->
-              <div class="company">Startup Hubs, Bitola</div>
+              <div class="company">Bitola</div>
             </div>
             <!--//meta-->
             <div class="details">
@@ -141,8 +141,28 @@
                 <li>Intermidiate HTML</li>
                 <li>Intermidiate CSS</li>
                 <li>Responsive design with Bootstrap 4</li>
-                <li>Angular 8 with TypeScript (not yet finished with the course)</li>
+                <li>JavaScript/TypeScript framework Angular 8</li>
+                <li>Familiarity with browser testing and debugging</li>
+                <li>Understanding of the entire web development process (design, development and deployment)</li>
               </ul>
+            </div>
+            <!--//details-->
+          </div>
+          <!--//item-->
+
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">Technical Consultant</h3>
+                <div class="time">Dec 2019- Present. Part-time*</div>
+              </div>
+              <!--//upper-row-->
+              <div class="company">‘Fiditek DOO’ – bul. “Ilinden” 60, 1000 Skopje</div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+              <p>Consultant in the field of sales of cash registers, electronic scales, software products and systems and complete trading equipment.</p>
+
             </div>
             <!--//details-->
           </div>
@@ -259,6 +279,15 @@
               <h3 class="level-title">JavaScript &amp; Jquery (basic knowledge)</h3>
               <div class="progress level-bar">
                 <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <!--//item-->
+
+            <div class="item">
+              <h3 class="level-title">Angular (basic knowledge)</h3>
+              <div class="progress level-bar">
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45"
                   aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
