Carreer profile update

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="section summary-section">
           <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
           <div class="summary">
-            <p>I started to learn coding about a year ago, since then I gained decent knowledge of structuring and
+            <p>I started learning coding about a year ago, since then I gained decent knowledge of structuring and
               styling web pages with <span>HTML, CSS.</span> I have knowledge of responsive design and mobile first approach with <span>Bootstrap 4,</span>  building single page web apps with <span>JS/Typescript</span> framework <span>Angular 8.</span> Understanding of the entire web development process (design, development and deployment)</p>
           </div>
           <!--//summary-->
