--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="profile-container">
           <img class="profile" src="assets/img/circle-cropped-300.png" style="width: 180px;" alt="my image" />
           <h1 class="name">Aleksandar Mitrevski</h1>
-          <h3 class="tagline">Full Stack Web Developer/ student</h3>
+          <h3 class="tagline">Information | Technology | Developing</h3>
         </div>
         <!--//profile-container-->
 
@@ -61,6 +61,13 @@
 
         <div class="education-container container-block">
           <h2 class="container-block-title"><i class="fas fa-university pr-2"></i>Education</h2>
+          <div class="item">
+            <h4 class="degree">Web developer</h4>
+            <h4 class="meta">Web application development with .NET</h4>
+            <h5 class="meta"><a href="https://iwec.mk/" target="_blank">IW Education Center</a>- Bitola.</h5>
+            <div class="time">2019 - 2020</div>
+          </div>
+          <!--//item-->
           <div class="item">
             <h4 class="degree">Engineer's Degree, Power systems</h4>
             <h4 class="meta">Energy Engineering (Electroenergetic System Engineering)</h4>
@@ -113,8 +120,13 @@
         <section class="section summary-section">
           <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
           <div class="summary">
-            <p>I started learning coding about a year ago, since then I gained decent knowledge of structuring and
-              styling web pages with <span>HTML, CSS.</span> I have knowledge of responsive design and mobile first approach with <span>Bootstrap 4,</span>  building single page web apps with <span>JS/Typescript</span> framework <span>Angular 8.</span> Understanding of the entire web development process (design, development and deployment)</p>
+          </p> Currently in Insurance but capable of doing some coding in <b>JavaScript</b> frameworks like <b>React</b>, messing on the dark side with <b>Node.js</b> and <b>MongoDB...</b> on the way to further develop his career in that field.
+           <p>
+             
+            <p>
+
+              Skilled in <b>Coaching, Sales, Team Building, Management,</b> and <b>Web Development</b> with technologies such as JS Frameworks. Strong engineering professional with an Engineer's Degree focused in Power Systems from Faculty of Technical Sciences - University “St. Kliment Ohridski” Bitola.
+            </p>
           </div>
           <!--//summary-->
         </section>
@@ -126,8 +138,8 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">"Freelance" - Web Developer </h3>
-                <div class="time">2019 - Present</div>
+                <h3 class="job-title">MERN Stack development</h3>
+                <div class="time">2020 Feb - Present</div>
               </div>
               <!--//upper-row-->
               <div class="company">Bitola</div>
@@ -135,13 +147,18 @@
             <!--//meta-->
             <div class="details">
               <ul>
-                <li>C# Fundamentals</li>
-                <li>Object-Oriented Programming Concepts with C# and .NET</li>
-                <li>Relational database development & design (SqlServer)</li>
-                <li>Intermidiate HTML</li>
-                <li>Intermidiate CSS</li>
-                <li>Responsive design with Bootstrap 4</li>
-                <li>JavaScript/TypeScript framework Angular 8</li>
+                <li>Intermediate HTML;</li>
+                <li>Intermediate CSS (Responsive design with Bootstrap 5);</li>
+                <li>Fundamentals of JavaScript and ES6  (Arrow functions, classes,  destructuring assignment, ES6 module system, promises ets..  );</li>
+                <li>DOM manipulation and the JavaScript object model;</li>
+                <li>React Fundamentals (Components, props, state, etc);</li>
+                <li>Styling React apps with "Styled Components", "CSS Modules", React Bootstrap;</li>
+                <li>Handling forms and user input (incl. validation);</li>
+                <li>Knowledge of modern authorization mechanisms, such as JSON Web Token (JWT Authentication);</li>
+                <li>React Hooks (useState, useEffect, useContext, useReducer, useRef);</li>
+                <li>Context API and  Redux - Reducers, Actions, etc;</li>
+                <li>build MERN projects - MongoDB, Express React, Node;</li>
+                <li>Familiarity with code versioning tools (Git, Github);</li>
                 <li>Familiarity with browser testing and debugging</li>
                 <li>Understanding of the entire web development process (design, development and deployment)</li>
               </ul>
@@ -149,6 +166,42 @@
             <!--//details-->
           </div>
           <!--//item-->
+
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">"Freelance" - Web Developer</h3>
+                <div class="time">Oct 2019- Present </div>
+              </div>
+              <!--//upper-row-->
+              <div class="company"></div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+              <p>Building MERN projects.</p>
+
+            </div>
+            <!--//details-->
+          </div>
+          <!--//item-->
+
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">Insurance Division</h3>
+                <div class="time">Aug 2020- Present </div>
+              </div>
+              <!--//upper-row-->
+              <div class="company">‘TASKFORCE BPO’ – Bitola</div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+              <p>Insurance Specialist</p>
+            </div>
+            <!--//details-->
+          </div>
+          <!--//item-->
+
 
           <div class="item">
             <div class="meta">
@@ -168,61 +221,6 @@
           </div>
           <!--//item-->
 
-          <div class="item">
-            <div class="meta">
-              <div class="upper-row">
-                <h3 class="job-title">Shop Seller/Shop Attendant</h3>
-                <div class="time">Nov 2015- Aug 2019.</div>
-              </div>
-              <!--//upper-row-->
-              <div class="company">MSC Cruises - Geneva, Switzerland</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-              <p>Builds relationships and trust with all guests to improve their shopping experience and to increase
-                sales opportunities. Informs guests of special offers, new products and promotions. Processes payments.
-                Ensures items are correctly priced and keeps the shop layout attractive and tidy, in line with company
-                guidelines. Monitors levels of stock and properly stores delivered products in a timely manner.</p>
-
-            </div>
-            <!--//details-->
-          </div>
-          <!--//item-->
-
-          <div class="item">
-            <div class="meta">
-              <div class="upper-row">
-                <h3 class="job-title">Hotel Operations – Bar Department</h3>
-                <div class="time">Oct 2011- March 2013</div>
-              </div>
-              <!--//upper-row-->
-              <div class="company">‘Celebrity Cruises’ – Fl. Miami USA</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-              <p>Bar service - bar tendering making and serving cocktails</p>
-            </div>
-            <!--//details-->
-          </div>
-          <!--//item-->
-
-          <div class="item">
-            <div class="meta">
-              <div class="upper-row">
-                <h3 class="job-title">Sales referent and Service technician</h3>
-                <div class="time">Aug 2008- Nov 2010</div>
-              </div>
-              <!--//upper-row-->
-              <div class="company">‘Zon Trade’ - Bitola, Macedonia</div>
-            </div>
-            <!--//meta-->
-            <div class="details">
-              <p>Selling of computers and other IT equipment and troubleshoots technical issues Tests units (IT
-                equipment) using test parts and test software and repair or replace parts as necessary for units.</p>
-            </div>
-            <!--//details-->
-          </div>
-          <!--//item-->
         </section>
         <!--//section-experiances-->
 
@@ -231,43 +229,43 @@
             Proficiency</h2>
           <div class="skillset">
             <div class="item">
-              <h3 class="level-title">C# Fundamentals</h3>
-              <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30"
-                  aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-            <!--//item-->
-
-            <div class="item">
-              <h3 class="level-title">Object-Oriented Programming Concepts with C# and .NET</h3>
-              <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
-                  aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-            <!--//item-->
-
-            <div class="item">
-              <h3 class="level-title">Relational database development & design (SqlServer)</h3>
-              <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
-                  aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-            <!--//item-->
-
-            <div class="item">
               <h3 class="level-title">HTML5 &amp; CSS</h3>
               <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95"
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
                   aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <!--//item-->
 
             <div class="item">
-              <h3 class="level-title">Responsive design with Bootstrap 4</h3>
+              <h3 class="level-title">JavaScript ES6</h3>
+              <div class="progress level-bar">
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <!--//item-->
+
+            <div class="item">
+              <h3 class="level-title">Object-Oriented Programming Concepts with JavaScript</h3>
+              <div class="progress level-bar">
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <!--//item-->
+
+            <div class="item">
+              <h3 class="level-title">MERN, data bases design (MongoDB)</h3>
+              <div class="progress level-bar">
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
+                  aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <!--//item-->
+
+            <div class="item">
+              <h3 class="level-title">Responsive design, Bootstrap</h3>
               <div class="progress level-bar">
                 <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
                   aria-valuemin="0" aria-valuemax="100"></div>
@@ -275,19 +273,11 @@
             </div>
             <!--//item-->
 
-            <div class="item">
-              <h3 class="level-title">JavaScript &amp; Jquery (basic knowledge)</h3>
-              <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
-                  aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-            <!--//item-->
 
             <div class="item">
-              <h3 class="level-title">Angular (basic knowledge)</h3>
+              <h3 class="level-title">React</h3>
               <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45"
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
                   aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
